<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/section_div"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/list_item_height_mini"
        android:layout_marginTop="@dimen/list_margin"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/list_margin"
            android:layout_marginStart="@dimen/list_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_libraries" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/list_margin"
            android:layout_marginStart="@dimen/list_margin"
            android:layout_toEndOf="@+id/imageView2"
            android:layout_toRightOf="@+id/imageView2"
            android:gravity="center_vertical"
            android:text="@string/libs_section_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_med" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/libonecard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/cards_padding"
        card_view:cardElevation="@dimen/cards_elevation">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                android:id="@+id/libone_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cards_text_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/libone_title"
                    android:layout_width="@dimen/no_width"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/materialdrawer_name"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_big"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/libone_author"
                    android:layout_width="@dimen/no_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mini_margin"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:maxLines="2"
                    android:text="@string/materialdrawer_author"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_ultrasmall"
                    android:textStyle="normal" />

            </LinearLayout>

            <TextView
                android:id="@+id/libone_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/libone_titles"
                android:layout_alignStart="@id/libone_titles"
                android:layout_below="@id/libone_titles"
                android:text="@string/materialdrawer_desc"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/libone_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/libone_content"
                android:layout_margin="@dimen/cards_text_margin"
                android:text="@string/apache_license"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_small" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/libtwocard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/cards_padding"
        card_view:cardElevation="@dimen/cards_elevation">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                android:id="@+id/libtwo_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cards_text_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/libtwo_title"
                    android:layout_width="@dimen/no_width"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/fab_name"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_big"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/libtwo_author"
                    android:layout_width="@dimen/no_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mini_margin"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:maxLines="2"
                    android:text="@string/fab_author"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_ultrasmall"
                    android:textStyle="normal" />

            </LinearLayout>

            <TextView
                android:id="@+id/libtwo_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/libtwo_titles"
                android:layout_alignStart="@id/libtwo_titles"
                android:layout_below="@id/libtwo_titles"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/fab_desc"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/libtwo_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/libtwo_content"
                android:layout_margin="@dimen/cards_text_margin"
                android:text="@string/apache_license"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_small" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/libthreecard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/cards_padding"
        card_view:cardElevation="@dimen/cards_elevation">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                android:id="@+id/libthree_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cards_text_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/libthree_title"
                    android:layout_width="@dimen/no_width"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/materialdialogs_name"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_big"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/libthree_author"
                    android:layout_width="@dimen/no_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mini_margin"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:maxLines="2"
                    android:text="@string/materialdialogs_author"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_ultrasmall"
                    android:textStyle="normal" />

            </LinearLayout>

            <TextView
                android:id="@+id/libthree_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/libthree_titles"
                android:layout_alignStart="@id/libthree_titles"
                android:layout_below="@id/libthree_titles"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/materialdialogs_desc"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/libthree_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/libthree_content"
                android:layout_margin="@dimen/cards_text_margin"
                android:text="@string/mit_license"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_small" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:id="@+id/libsevencard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/cards_padding"
        card_view:cardElevation="@dimen/cards_elevation">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                android:id="@+id/libseven_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cards_text_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/libseven_title"
                    android:layout_width="@dimen/no_width"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/pkrequestmanager_name"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_big"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/libseven_author"
                    android:layout_width="@dimen/no_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mini_margin"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:maxLines="2"
                    android:text="@string/pkrequestmanager_author"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_ultrasmall"
                    android:textStyle="normal" />

            </LinearLayout>

            <TextView
                android:id="@+id/libseven_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/libseven_titles"
                android:layout_alignStart="@id/libseven_titles"
                android:layout_below="@id/libseven_titles"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/pkrequestmanager_desc"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/libseven_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/libseven_content"
                android:layout_margin="@dimen/cards_text_margin"
                android:text="@string/mit_license"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_small" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>