<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:id="@+id/devcard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/cards_padding"
        card_view:cardElevation="@dimen/cards_elevation">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                android:id="@+id/app_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cards_text_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/app_title"
                    android:layout_width="@dimen/no_width"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/developer"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_big"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/app_author"
                    android:layout_width="@dimen/no_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mini_margin"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:maxLines="2"
                    android:text="@string/companyname"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_ultrasmall"
                    android:textStyle="normal" />

            </LinearLayout>
            <RelativeLayout
                android:id="@+id/feedback_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_below="@+id/app_titles"
                android:layout_margin="@dimen/card_margin">
                <ImageView
                    android:id="@+id/feedback_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_feedback"/>
                <TextView
                    android:id="@+id/feedback_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/feedback_card"
                    android:layout_toRightOf="@id/feedback_card"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:text="@string/send_mail"
                    android:textColor="@color/md_grey_800"
                    android:textSize="@dimen/text_big"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/fb_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_below="@+id/feedback_layout"
                android:layout_margin="@dimen/card_margin">
                <ImageView
                    android:id="@+id/fb_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_facebook"/>
                <TextView
                    android:id="@+id/fb_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/fb_card"
                    android:layout_toRightOf="@id/fb_card"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:text="@string/fb"
                    android:textColor="@color/md_grey_800"
                    android:textSize="@dimen/text_big"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/instagram_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_below="@+id/twitter_layout"
                android:layout_margin="@dimen/card_margin">
                <ImageView
                    android:id="@+id/instagram_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_instagram"/>
                <TextView
                    android:id="@+id/instagram_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/instagram_card"
                    android:layout_toRightOf="@id/instagram_card"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:text="@string/instagram"
                    android:textColor="@color/md_grey_800"
                    android:textSize="@dimen/text_big"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/twitter_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fb_layout"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="@dimen/card_margin">
                <ImageView
                    android:id="@+id/twitter_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_twitter"/>
                <TextView
                    android:id="@+id/twitter_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/twitter_card"
                    android:layout_toRightOf="@id/twitter_card"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:text="@string/twitter"
                    android:textColor="@color/md_grey_800"
                    android:textSize="@dimen/text_big"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <!--Amazon Layout-->
            <RelativeLayout
                android:id="@+id/amazon_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_below="@+id/instagram_layout"
                android:layout_margin="@dimen/card_margin">
                <ImageView
                    android:id="@+id/amazon_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_store"/>
                <TextView
                    android:id="@+id/amazon_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/amazon_card"
                    android:layout_toRightOf="@id/amazon_card"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:text="@string/amazon"
                    android:textColor="@color/md_grey_800"
                    android:textSize="@dimen/text_big"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>